@@ -1,1 +1,1 @@
-<pkgref spec="1.12" uuid="BCA7515E-4B15-4CF3-85BF-E4BE3BA42837"><config><identifier>org.c-base.libavg.bindist.pkg</identifier><version>1.6.0.pre1</version><description></description><post-install type="none"/><requireAuthorization/><installFrom mod="true">/Users/uzadow/devel/libavg/bindist</installFrom><installTo mod="true">/usr/bin</installTo><flags><followSymbolicLinks/></flags><packageStore type="internal"></packageStore><mod>installTo.path</mod><mod>installFrom.path</mod><mod>parent</mod><mod>installTo</mod><mod>version</mod></config><contents><file-list>02bindist-contents.xml</file-list><filter>/CVS$</filter><filter>/\.svn$</filter><filter>/\.cvsignore$</filter><filter>/\.cvspass$</filter><filter>/\.DS_Store$</filter></contents></pkgref>
+<pkgref spec="1.12" uuid="BCA7515E-4B15-4CF3-85BF-E4BE3BA42837"><config><identifier>org.c-base.libavg.bindist.pkg</identifier><version>1.6.0</version><description></description><post-install type="none"/><requireAuthorization/><installFrom mod="true">/Users/uzadow/devel/libavg/bindist</installFrom><installTo mod="true">/usr/bin</installTo><flags><followSymbolicLinks/></flags><packageStore type="internal"></packageStore><mod>installTo.path</mod><mod>installFrom.path</mod><mod>parent</mod><mod>installTo</mod><mod>version</mod></config><contents><file-list>02bindist-contents.xml</file-list><filter>/CVS$</filter><filter>/\.svn$</filter><filter>/\.cvsignore$</filter><filter>/\.cvspass$</filter><filter>/\.DS_Store$</filter></contents></pkgref>
