@@ -1,3 +1,15 @@
+libavg 1.6.0 - May 29, 2011
+
+  svn revision 6022, branch release1.6.x
+
+  Bugfix release
+
+libavg 1.6.0.pre2 - May 27, 2011
+
+  svn revision 6018, branch release1.6.x
+
+  Bugfix release
+
 libavg 1.6.0.pre1 - May 20, 2011
 
   svn revision 5974
